# deepscalecli

./: .gitignore  README.md  install.sh  pyproject.toml
deepscalecli/: cli.py  main.py  utils.py
tests/: test_deepslacecli.py
