[tool.poetry]
name = "deepscalecli"
version = "0.1.0"
description = ""
authors = ["mlog00 <michal.logaciuk@me.pl>"]
readme = "README.md"


[tool.poetry.scripts]
deepscalecli = "deepscalecli.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
opencv-contrib-python = "^4.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
